--- a/package.json
+++ b/package.json
@@ -1,7 +1,22 @@
 {
   "name": "telltale",
-  "module": "index.ts",
+  "module": "dist/index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "type": "module",
+  "scripts": {
+    "build": "tsc -p tsconfig.build.json",
+    "postinstall": "bun run build",
+    "prepublishOnly": "bun run build",
+    "clean": "rm -rf dist"
+  },
+  "files": [
+    "dist",
+    "src",
+    "index.ts",
+    "tsconfig.json",
+    "tsconfig.build.json"
+  ],
   "devDependencies": {
     "@babel/parser": "^7.27.4",
     "@babel/traverse": "^7.27.4",
