--- a/package.json
+++ b/package.json
@@ -1,11 +1,25 @@
 {
   "name": "telltale",
-  "module": "dist/index.js",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "type": "module",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "types": "dist/cjs/index.d.ts",
+  "exports": {
+    ".": {
+      "import": {
+        "types": "./dist/esm/index.d.ts",
+        "default": "./dist/esm/index.js"
+      },
+      "require": {
+        "types": "./dist/cjs/index.d.ts",
+        "default": "./dist/cjs/index.js"
+      }
+    }
+  },
   "scripts": {
-    "build": "tsc -p tsconfig.build.json",
+    "build": "bun run build:cjs && bun run build:esm && bun run build:post",
+    "build:cjs": "tsc -p tsconfig.cjs.json",
+    "build:esm": "tsc -p tsconfig.esm.json",
+    "build:post": "bun scripts/create-esm-package.js",
     "postinstall": "bun run build",
     "prepublishOnly": "bun run build",
     "clean": "rm -rf dist"
@@ -15,7 +29,9 @@
     "src",
     "index.ts",
     "tsconfig.json",
-    "tsconfig.build.json"
+    "tsconfig.cjs.json",
+    "tsconfig.esm.json",
+    "scripts"
   ],
   "devDependencies": {
     "@babel/parser": "^7.27.4",
