--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -2,13 +2,16 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "noEmit": false,
-    "outDir": "dist",
+    "outDir": "dist/cjs",
     "declaration": true,
     "declarationMap": true,
-    "module": "ESNext",
+    "module": "CommonJS",
     "moduleResolution": "node",
     "allowImportingTsExtensions": false,
-    "verbatimModuleSyntax": false
+    "verbatimModuleSyntax": false,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "target": "ES2020"
   },
   "include": [
     "index.ts",
