--- a/package.json
+++ b/package.json
@@ -9,20 +9,28 @@
     }
   },
   "scripts": {
-    "build": "tsc",
+    "build": "rollup -c",
+    "clean": "rm -rf dist",
     "postinstall": "pnpm run build",
     "prepublishOnly": "pnpm run build"
   },
   "files": [
     "dist",
     "src",
-    "tsconfig.json"
+    "tsconfig.json",
+    "rollup.config.js"
   ],
   "devDependencies": {
     "@babel/parser": "^7.27.4",
     "@babel/traverse": "^7.27.4",
     "@babel/types": "^7.27.3",
+    "@rollup/plugin-commonjs": "^28.0.3",
+    "@rollup/plugin-node-resolve": "^16.0.1",
+    "@rollup/plugin-typescript": "^12.1.2",
     "@types/babel__traverse": "^7.20.7",
+    "rollup": "^4.41.1",
+    "rollup-plugin-dts": "^6.2.1",
+    "tslib": "^2.8.1",
     "vite": "^6.3.5"
   },
   "peerDependencies": {
