--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "telltale",
+  "name": "@jl/telltale",
   "version": "0.0.1",
   "module": "dist/index.js",
   "type": "module",
@@ -12,6 +12,10 @@
   "scripts": {
     "build": "rollup -c",
     "clean": "rm -rf dist",
+    "publish": "npm publish --access public",
+    "release:patch": "npm version patch && npm publish --access public",
+    "release:minor": "npm version minor && npm publish --access public", 
+    "release:major": "npm version major && npm publish --access public",
     "postinstall": "pnpm run build",
     "prepublishOnly": "pnpm run build"
   },
